# mariana

./: .gitignore  .gitmodules  CMakeLists.txt  License  readme.md
source/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
source/audio/: Diffuser.h  MarianaConvolution.cpp  MarianaConvolution.h  MarianaProcessor.cpp  MarianaProcessor.h
source/ui/: BackgroundComponent.cpp  BackgroundComponent.h  Readouts.cpp  Readouts.h
